--- a/application/views/data/list-operations.pug
+++ b/application/views/data/list-operations.pug
@@ -5,7 +5,7 @@ block append header
 
 block content
   .container-fluid
-    h1.mb-4 Histórico de Operações
+    h1.mb-4 Operation History
     include components/operation-table.pug
 
 
