--- a/application/views/processRequest/index.pug
+++ b/application/views/processRequest/index.pug
@@ -6,7 +6,7 @@ block append header
 block content
   .container-fluid
     .d-flex.flex-row.justify-content-between.mb-4
-      h1.d-inline Solicitações de Processamento
+      h1.d-inline Process Requests
     include components/process-request-table.pug
 
 
