--- a/application/views/processableData/components/process-modal.pug
+++ b/application/views/processableData/components/process-modal.pug
@@ -2,7 +2,7 @@
   .modal-dialog(role='document')
     .modal-content
       .modal-header
-        h5#exampleModalLabel.modal-title Processar esse dado?
+        h5#exampleModalLabel.modal-title Process this DNA?
         button.close(type='button' data-dismiss='modal' aria-label='Close')
           span(aria-hidden='true') &times;
       .modal-body 
@@ -12,8 +12,8 @@
           input#type(hidden name='type' type='text' value='process')
 
           .mb-3
-            | Clique em &quot;Processar&quot; abaixo para confirmar a solicitação de processamento
+            | Click in &quot;Process&quot; below to create a process request
 
           .modal-footer
-            button.btn.btn-secondary(type='button' data-dismiss='modal') Cancelar
-            input.btn.btn-primary.btn-user(type='submit' value='Processar')
+            button.btn.btn-secondary(type='button' data-dismiss='modal') Cancel
+            input.btn.btn-primary.btn-user(type='submit' value='Process')
