--- a/application/views/processableData/index.pug
+++ b/application/views/processableData/index.pug
@@ -5,7 +5,7 @@ block append header
 
 block content
   .container-fluid
-    h1.mb-4 Dados a serem processados
+    h1.mb-4 Data to be processed
     include components/data-table.pug
 
 
