--- a/application/views/processRequest/show.pug
+++ b/application/views/processRequest/show.pug
@@ -4,11 +4,11 @@ block append header
 
 block content
   .container.mt-4
-    h1 Detalhes da Solicitação
+    h1 Process request details
     .card.mb-4
       .card-header.d-flex.justify-content-between.align-items-center
-        | Solicitação de Processamento
-        if(processRequest.status != "Processado")
+        | Process Request
+        if(processRequest.status != "Processed")
           a.btn.btn-primary.btn-sm.mr-4(href='/data/processed-data-new/?processRequest=' + processRequest.id)
             | Insert Processed DNA
             
@@ -22,18 +22,18 @@ block content
               label.mb-1(for='id') ID
               input#id.form-control(disabled type='text'  value=processRequest.id)
           .form-group
-            label.mb-1(for='created_at') Criado em
+            label.mb-1(for='created_at') Created At
             input#created_at.form-control(disabled type='text'  value=processRequest.created_at)
 
           hr
           .mb-4.mt-4.font-weight-bold
-            | Dados Brutos
+            | Raw DNA
           .form-row
             .form-group.col-md-6
-              label.mb-1(for='raw_data_title') Título do Dado Bruto
+              label.mb-1(for='raw_data_title') Raw DNA title
               input#raw_data_title.form-control(disabled type='text' value= processRequest.raw_data.title)
             .form-group.col-md-6
-              label.mb-1(for='raw_data_id') Id do Dado Bruto
+              label.mb-1(for='raw_data_id') Raw DNA ID
               div.mt-2
                 a(href='/data/' + processRequest.raw_data_id)
                   = processRequest.raw_data_id
@@ -41,26 +41,26 @@ block content
           if (processRequest.processor)
             hr
             .mb-4.mt-4.font-weight-bold
-              | Processador
+              | Processor
             .form-row
               .form-group.col-md-6
-                label.mb-1(for='processor_name') Nome do Processador
+                label.mb-1(for='processor_name') Processor Name
                 input#processor_name.form-control(disabled type='text' value= processRequest.processor.name)
               .form-group.col-md-6
-                label.mb-1(for='processor_id') Id do Processador
+                label.mb-1(for='processor_id') Processor ID
                 div.mt-2
                   a(href='/processor/' + processRequest.processor_id)
                     = processRequest.processor_id
 
           if (processRequest.processed_data)
             hr
-            .mb-4.mt-4.font-weight-bold Dados Processados
+            .mb-4.mt-4.font-weight-bold Processed DNA
             .form-row
               .form-group.col-md-6
-                label.mb-1(for='processed_data_title') Title do Dado Processado
+                label.mb-1(for='processed_data_title') Processed DNA title
                 input#processed_data_title.form-control(disabled type='text' value= processRequest.processed_data.title)
               .form-group.col-md-6
-                label.mb-1(for='processed_data_id') Id do Dado Processado
+                label.mb-1(for='processed_data_id') Processed DNA ID
                 div.mt-2
                   a(href='/data/' + processRequest.processed_data_id)
                     = processRequest.processed_data_id
