--- a/application/views/processableData/components/data-table.pug
+++ b/application/views/processableData/components/data-table.pug
@@ -1,17 +1,17 @@
 .card.shadow.mb-4
   .card-header.py-3
-    h6.m-0.font-weight-bold.text-primary Lista de Dados Brutos
+    h6.m-0.font-weight-bold.text-primary Raw DNA list
   .card-body
     .table-responsive
       table#dataTable.table.table-bordered(width='100%' cellspacing='0')
         thead
           tr
-            th Título
-            th Coletor
-            th Criado em
-            th Recompensa
+            th Title
+            th Collector
+            th Created at
+            th Reward
             th Status
-            th Ação
+            th Action
         tbody
           each data, index in datas
             tr
@@ -27,11 +27,11 @@
                 = data.status
               td
                 a.btn.btn-info.btn-sm.btn-circle.mr-2(
-                  data-toggle="tooltip" data-placement="top" title="Ver Detalhes" href="/data/" + data.id
+                  data-toggle="tooltip" data-placement="top" title="See Details" href="/data/" + data.id
                 )
                   i.fas.fa-eye
                 a.btn.btn-primary.btn-sm.btn-circle.mr(
-                  data-placement="top" title="Processar" data-toggle="modal" data-target="#processModal"+index  href='#'
+                  data-placement="top" title="Process" data-toggle="modal" data-target="#processModal"+index  href='#'
                 )
                   i.fas.fa-cogs
             include process-modal.pug
