royalt payment view dinamic

--- a/application/views/dnaContract/show.pug
+++ b/application/views/dnaContract/show.pug
@@ -4,7 +4,7 @@ block append header
 
 block content
   .container.mt-4
-    h1 Smart Contract Details
+    h1 Smart Contract Details 
     .card.mb-4
       .card-header.card-header.d-flex.justify-content-between.align-items-center Smart Contract
         div 
@@ -19,7 +19,7 @@ block content
           .form-row
             .form-group.col-md-6
               label.mb-1(for='id') Contract ID
-              input#id.form-control(disabled type='text'  value=dnaContract.id)
+              input#id.form-control(disabled type='text'  value=dnaContract.id style='font-size: small')
             .form-group.col-md-6
               label.mb-1(for='created_at') Created At
               input#id.form-control(disabled type='text'  value=dnaContract.created_at)
