add upload processed data

--- a/application/views/data/components/data-table.pug
+++ b/application/views/data/components/data-table.pug
@@ -17,7 +17,7 @@
               td
                 = data.type
               td
-                = data.title
+                = data.metadata.title
               td
                 = data.collector
               td
