--- a/application/views/layout/sidebar.pug
+++ b/application/views/layout/sidebar.pug
@@ -37,7 +37,7 @@ ul#accordionSidebar.navbar-nav.bg-gradient-primary.sidebar.sidebar-dark.accordio
   li.nav-item
     a.nav-link(href='/process-request')
       i.fas.fa-fw.fa-file-invoice
-      span Solicitations
+      span Process Requests
 
  
   hr.sidebar-divider
