--- a/application/views/layout/navbar.pug
+++ b/application/views/layout/navbar.pug
@@ -101,7 +101,7 @@ nav.navbar.navbar-expand.navbar-light.bg-white.topbar.mb-4.static-top.shadow
     // Nav Item - User Information
     li.nav-item.dropdown.no-arrow
       a#userDropdown.nav-link.dropdown-toggle(href='#' role='button' data-toggle='dropdown' aria-haspopup='true' aria-expanded='false')
-        span.mr-2.d-none.d-lg-inline.text-gray-600.small Valerie Luna
+        span.mr-2.d-none.d-lg-inline.text-gray-600.small Toshi
         img.img-profile.rounded-circle(src='https://source.unsplash.com/QAB-WJcbgJk/60x60')
       // Dropdown - User Information
       .dropdown-menu.dropdown-menu-right.shadow.animated--grow-in(aria-labelledby='userDropdown')
