--- a/application/views/layout/sidebar.pug
+++ b/application/views/layout/sidebar.pug
@@ -58,6 +58,20 @@ ul#accordionSidebar.navbar-nav.bg-gradient-primary.sidebar.sidebar-dark.accordio
   // Nav Item - Charts
   // Divider
   hr.sidebar-divider.d-none.d-md-block
+  //Nav Item - Account
+  li.nav-item
+    a.nav-link.collapsed(href='#' data-toggle='collapse' data-target='#collapseOne' aria-expanded='true' aria-controls='collapseOne')
+      i.fas.fa-upload
+      span My Account
+    #collapseOne.collapse(aria-labelledby='headingTwo' data-parent='#accordionSidebar')
+      .bg-white.py-2.collapse-inner.rounded
+        a.collapse-item(href='/account/show-my-account') Profile
+        a.collapse-item(href='/account/transfer') Transfer
   // Sidebar Toggler (Sidebar)
   .text-center.d-none.d-md-inline
     button#sidebarToggle.rounded-circle.border-0
+ 
+
+  
+   
+  
