--- a/application/views/account/new-transfer.pug
+++ b/application/views/account/new-transfer.pug
@@ -28,7 +28,7 @@ block content
           .form-row 
             .form-group.col-md-12 
               label.mb-1(for='amount') Valor da transferência 
-              input#amount.form-control(name = 'amount' type = 'text')
+              input#amount.form-control.bio-money-input(name = 'amount' type = 'text')
             hr
             .float-right.mb-4.inline-block
             input.btn.btn-primary.btn-user.btn-lg.px-10(type='submit' value = 'Transferir')
