--- a/application/views/processRequest/components/process-request-table.pug
+++ b/application/views/processRequest/components/process-request-table.pug
@@ -8,7 +8,7 @@
           tr
             th Status
             th Created At
-            th Raw DNA title
+            th ID
             th Raw DNA ID
             th Action
         tbody
@@ -19,7 +19,7 @@
               td
                 = processRequest.created_at
               td
-                = processRequest.raw_data.title
+                = processRequest.id
               td.small
                 = processRequest.raw_data.id
               td
