--- a/application/views/data/components/data-table.pug
+++ b/application/views/data/components/data-table.pug
@@ -8,7 +8,7 @@
           tr
             th Type
             th Title
-            th Collector
+            th ID
             th Created At
             th Actions
         tbody
@@ -19,7 +19,7 @@
               td
                 = data.metadata.title
               td
-                = data.collector
+                = data.id
               td
                 = data.created_at
 
