add buying option

--- a/application/views/dnaContract/components/buy-modal.pug
+++ b/application/views/dnaContract/components/buy-modal.pug
@@ -8,8 +8,19 @@
       .modal-body Click in &quot;Buy&quot; below to buy DNA for 
         = dnaContract.raw_dna_price
         |  Biocoins
-      .modal-footer
-        button.btn.btn-secondary(type='button' data-dismiss='modal') Cancel
+      .modal-footer.justify-content-start
         form.user(action='execute-contract/' + dnaContract.id method='post')
-          input#type(hidden name='type' type='text' value='buy_raw_dna')
-          input.btn.btn-primary.btn-user(type='submit' value='BUY')
+          .form-row
+            .form-check
+              input#radioRawData.form-check-input(type='radio', name='type' value='buy_raw_dna', checked)
+              label.form-check-label(for='radioRawData')
+                  | Raw Data
+          .form-row
+            .form-check
+                input#radioProcessedData.form-check-input(type='radio', name='type' value='buy_processed_dna')
+                label.form-check-label(for='radioProcessedData')
+                    | Processed Data
+          .form-row.justify-content-end.mt-4
+            button.btn.btn-secondary(type='button' data-dismiss='modal') Cancel
+            //- input#type(hidden name='type' type='text' value='buy_raw_dna')
+            input.btn.btn-primary.btn-user(type='submit' value='BUY')
