add endorse dna button

--- a/application/views/data/components/data-show-form.pug
+++ b/application/views/data/components/data-show-form.pug
@@ -25,8 +25,8 @@ form
         label.mb-1(for='magnet_link') Data's Magnetic Link
         input#owners.form-control(disabled type='text' value= data.metadata.magnet_link)
   .form-group
-    label.mb-1(for='collector') Collector
-    input#collector.form-control(disabled type='text' value= data.collector)
+    label.mb-1(for='uploader') Uploader
+    input#uploader.form-control(disabled type='text' value= data.uploader)
   .form-group
     label.mb-1(for='owners') Owners
     input#owners.form-control(disabled type='text' value= data.owners)
