some changes in view

--- a/application/views/data/components/operation-table.pug
+++ b/application/views/data/components/operation-table.pug
@@ -10,7 +10,7 @@
             th Created At
             th Type
             th User address
-            th OPeration ID
+            th Operation ID
             th Action
         tbody
           each operation in operations
