--- a/application/views/data/show.pug
+++ b/application/views/data/show.pug
@@ -1,6 +1,7 @@
 extends ../layout/layout.pug
 
 block append header
+  link(rel='stylesheet', href='/vendor/bootstrap-theme/vendor/datatables/dataTables.bootstrap4.min.css')
 
 block content
   .container.mt-4
@@ -13,9 +14,8 @@ block content
             a.btn.btn-primary.btn-sm.mr-4(href='/dnaContract/'+ dnaContract.id)
               | See Smart Contract
           else if(data.process_request_id)
-            form.user.d-inline(action='/dnaContract/endorse' method='post')
-              input#process-request-id(type='text' hidden name='process_request_id' value=data.process_request_id)
-              input.btn.btn-primary.btn-sm.mr-2(type='submit' value='Endorse DNA')
+            a.btn.btn-primary.btn-sm.text-white.mr-2(data-toggle="modal" data-target="#endorseModal" title="Buy DNA")
+              | Endorse DNA
           else if( !data.process_request_id )
             a.btn.btn-danger.btn-sm.mr-4(href='/dnaContract/new/'+data.id)
               | Create Smart Contract
@@ -26,11 +26,27 @@ block content
               
           a.btn.btn-secondary.btn-sm(href=data.key+'/list-operations')
             | See History Operation
+      include components/data-show-form.pug
+    .card
+      .card-header List of Owners
       .card-body
-        include components/data-show-form.pug
+        .table-responsive
+          table#dataTable.table.table-bordered(width='100%' cellspacing='0')
+            thead
+              tr 
+                th Owner ID
+            tbody
+              each ownerId, index in data.owners
+                tr
+                  td
+                    = ownerId
 
+    include components/endorse-modal.pug
 
 block append scripts
+  script(src='/vendor/bootstrap-theme/vendor/datatables/jquery.dataTables.min.js')
+  script(src='/vendor/bootstrap-theme/vendor/datatables/dataTables.bootstrap4.min.js')
+  script(src='/js/datatable.js')
   script.
     let process_request_id = "#{data.process_request_id}"
     function endorseDna(){
