--- a/application/views/dnaContract/show.pug
+++ b/application/views/dnaContract/show.pug
@@ -4,18 +4,6 @@ block append header
 
 block content
   .container.mt-4
-    //- if(flash)
-    //-   if(flash.success)
-    //-     .alert.alert-primary.alert-dismissible.fade.show(role=alert)
-    //-       = flash.success
-    //-       button.close(type="button" data-dismiss="alert" aria-label="Close")
-    //-         span(aria-hidden="true") &times;
-    //-   if(flash.error)
-    //-     .alert.alert-danger.alert-dismissible.fade.show(role=alert)
-    //-       = flash.error
-    //-       button.close(type="button" data-dismiss="alert" aria-label="Close")
-    //-         span(aria-hidden="true") &times;
-
     h1 Smart Contract Details 
     .card.mb-4
       .card-header.card-header.d-flex.justify-content-between.align-items-center Smart Contract
@@ -50,63 +38,60 @@ block content
               input.form-control.bio-money-input(disabled value=dnaContract.processed_data_price  type='text')
               
         if(dnaContract.accepted_processed_data)
-          .card.mb-12
-            .card-header Accepted Processed Data
-            .card-body
-              .form-row
-                .form-group.col-md-6
-                  label.mb-1(for='price') Processed data ID
-                  a.fas.fa-info-circle.ml-2(tabindex="0" data-toggle="popover" data-html="true" data-trigger="focus" data-content="You, who inserts the raw DNA.")
-                  input#price.form-control(disabled value=dnaContract.accepted_processed_data.processed_data_id type='text')
-                .form-group.col-md-6
-                  label.mb-1(for='price') Process Request ID
-                  a.fas.fa-info-circle.ml-2(tabindex="0" data-toggle="popover" data-html="true" data-trigger="focus" data-content="Who process the DNA")
-                  input#price.form-control(disabled value=dnaContract.accepted_processed_data.process_request_id type='text')
+          hr.mt-4
+          h6.mb-3 Accepted Processed Data
+          .form-row
+            .form-group.col-md-6
+              label.mb-1(for='price') Processed data ID
+              a.fas.fa-info-circle.ml-2(tabindex="0" data-toggle="popover" data-html="true" data-trigger="focus" data-content="You, who inserts the raw DNA.")
+              input#price.form-control(disabled value=dnaContract.accepted_processed_data.processed_data_id type='text')
+            .form-group.col-md-6
+              label.mb-1(for='price') Process Request ID
+              a.fas.fa-info-circle.ml-2(tabindex="0" data-toggle="popover" data-html="true" data-trigger="focus" data-content="Who process the DNA")
+              input#price.form-control(disabled value=dnaContract.accepted_processed_data.process_request_id type='text')
                 
 
-        .card.mb-3
-        .card-header Payment Distribution (in percentage)
-        .card-body
-          .form-row
-            .form-group.col-md-3
-              label.mb-1(for='price') Collector
-              a.fas.fa-info-circle.ml-2(tabindex="0" data-toggle="popover" data-html="true" data-trigger="focus" data-content="You, who inserts the raw DNA.")
-              input#price.form-control.percentage(disabled value=dnaContract.payment_distribution.collector type='text')
-            .form-group.col-md-3
-              label.mb-1(for='price') Processor
-              a.fas.fa-info-circle.ml-2(tabindex="0" data-toggle="popover" data-html="true" data-trigger="focus" data-content="Who process the DNA")
-              input#price.form-control.percentage(disabled value=dnaContract.payment_distribution.processor type='text')
-            .form-group.col-md-3 
-              label.mb-1(for='price') Validators
-              a.fas.fa-info-circle.ml-2(tabindex="0" data-toggle="popover" data-html="true" data-trigger="focus" data-content="Those who validate the processor work (0-2 validators). The reward will be distributed equaly between then")
-              input#price.form-control.percentage(disabled value=dnaContract.payment_distribution.validators type='text')
-            .form-group.col-md-3
-              label.mb-1(for='price') Curator
-              a.fas.fa-info-circle.ml-2(tabindex="0" data-toggle="popover" data-html="true" data-trigger="focus" data-content="Who certificate that the DNA is legitim and correct")
-              input#price.form-control.percentage(disabled value=dnaContract.payment_distribution.curator type='text')
+        hr.mt-4
+        h6.mb-3 Payment Distribution (in percentage)
+        .form-row
+          .form-group.col-md-3
+            label.mb-1(for='price') Collector
+            a.fas.fa-info-circle.ml-2(tabindex="0" data-toggle="popover" data-html="true" data-trigger="focus" data-content="You, who inserts the raw DNA.")
+            input#price.form-control.percentage(disabled value=dnaContract.payment_distribution.collector type='text')
+          .form-group.col-md-3
+            label.mb-1(for='price') Processor
+            a.fas.fa-info-circle.ml-2(tabindex="0" data-toggle="popover" data-html="true" data-trigger="focus" data-content="Who process the DNA")
+            input#price.form-control.percentage(disabled value=dnaContract.payment_distribution.processor type='text')
+          .form-group.col-md-3 
+            label.mb-1(for='price') Validators
+            a.fas.fa-info-circle.ml-2(tabindex="0" data-toggle="popover" data-html="true" data-trigger="focus" data-content="Those who validate the processor work (0-2 validators). The reward will be distributed equaly between then")
+            input#price.form-control.percentage(disabled value=dnaContract.payment_distribution.validators type='text')
+          .form-group.col-md-3
+            label.mb-1(for='price') Curator
+            a.fas.fa-info-circle.ml-2(tabindex="0" data-toggle="popover" data-html="true" data-trigger="focus" data-content="Who certificate that the DNA is legitim and correct")
+            input#price.form-control.percentage(disabled value=dnaContract.payment_distribution.curator type='text')
 
-          .card
-            .card-header Royalty Payments
-            .card-body
-              each royalty_payment, index in dnaContract.royalty_payments
-                .form-row
-                  .form-group.col-md-4
-                    label.mb-1(for='price') Type
-                    a.fas.fa-info-circle.ml-2(tabindex="0" data-toggle="popover" data-html="true" data-trigger="focus" 
-                      data-content="'no_royalties'- without any type of royalties; <br>\
-                        'fixed_one_time_fee'- with an unique payment, when buying DNA; <br>\
-                        'proportional_one_time_fee'- with an unique payment, proportional to DNA price; <br>\
-                        'fixed_periodic_fee'- with a periodic fixed-value payment, while the product is on the market; <br>\
-                        'proportional_periodic_fee'- with a periodic payment, proportional to DNA price, while the product is on the market; <br>\
-                        'profit_proportional_periodic_fee'- with a periodic payment, proportional to product profit (e.g. 5%);\
-                        ")
-                    input.form-control(disabled value=royalty_payment.type)
-                  .form-group.col-md-2
-                    label.mb-1(for='value') Value 
-                    input.form-control(disabled value=royalty_payment.value)
-                  .form-group.col-md-2
-                    label.mb-1(for='period') Period in months 
-                    input#price.form-control.royalty-payment-period(value=royalty_payment.period type='text' disabled=true)
+        hr.mt-4
+        h6.mb-3 Royalty Payments
+        each royalty_payment, index in dnaContract.royalty_payments
+          .form-row
+            .form-group.col-md-4
+              label.mb-1(for='price') Type
+              a.fas.fa-info-circle.ml-2(tabindex="0" data-toggle="popover" data-html="true" data-trigger="focus" 
+                data-content="'no_royalties'- without any type of royalties; <br>\
+                  'fixed_one_time_fee'- with an unique payment, when buying DNA; <br>\
+                  'proportional_one_time_fee'- with an unique payment, proportional to DNA price; <br>\
+                  'fixed_periodic_fee'- with a periodic fixed-value payment, while the product is on the market; <br>\
+                  'proportional_periodic_fee'- with a periodic payment, proportional to DNA price, while the product is on the market; <br>\
+                  'profit_proportional_periodic_fee'- with a periodic payment, proportional to product profit (e.g. 5%);\
+                  ")
+              input.form-control(disabled value=royalty_payment.type)
+            .form-group.col-md-2
+              label.mb-1(for='value') Value 
+              input.form-control(disabled value=royalty_payment.value)
+            .form-group.col-md-2
+              label.mb-1(for='period') Period in months 
+              input#price.form-control.royalty-payment-period(value=royalty_payment.period type='text' disabled=true)
 
   include components/buy-modal.pug
 
